--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,19 @@
 body {
     font-family: Montserrat, sans-serif;
     font-weight: 300;
+    color: #3a3a3a;
+}
+
+/* headings and logo */
+
+h1, h2 {
+    font-family: Playfair Display, sans-serif;
+}
+
+#logo {
+    float: left;
+    height: 150px;
+    width: 150px;
+    margin: 15px;
+    padding: 15px;
 }
