--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 
 /* headings and logo */
 
-h1, h2 {
+h1, h2, nav li {
     font-family: Playfair Display, sans-serif;
 }
 
@@ -24,4 +24,18 @@ h1, h2 {
     width: 150px;
     margin: 15px;
     padding: 15px;
+}
+
+/* navigation bar links */
+
+#menu {
+    float: right;
+    font-size: 120%;
+    letter-spacing: 2px;
+}
+
+#menu li {
+    display: inline;
+    list-style-type: none;
+    margin-right: 20px;
 }
