--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,17 @@ h1, h2, nav li {
     letter-spacing: 2px;
 }
 
+#menu, #logo {
+    line-height: 125px;
+}
+
 #menu li {
     display: inline;
     list-style-type: none;
     margin-right: 50px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: #3a3a3a;
 }
