--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,8 @@ h1, h2, nav li {
     text-decoration: none;
     color: #3a3a3a;
 }
+
+#menu a:hover {
+    color: #58A690;
+    border-bottom:  2px solid #3a3a3a;
+}
