--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 
 nav {
     width: 100%;
-    background-color: #BFB1A8;
+    background-color: #e5dedc;
     overflow: auto;
 }
 /* headings and logo */
@@ -56,6 +56,6 @@ h1, h2, nav li {
 }
 
 #menu a:hover {
-    color: #58A690;
+    color: #3f4826;
     border-bottom:  2px solid #3a3a3a;
 }
