--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,3 +59,24 @@ h1, h2, nav li {
     color: #3f4826;
     border-bottom:  2px solid #3a3a3a;
 }
+
+/*The Hero Image*/
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/hero-image.jpg');
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    font-size: xx-large;
+    text-align: center;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #DAE7E3;
+}
