--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display:wght@500&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +18,7 @@ nav {
 /* headings and logo */
 
 h1, h2 {
-    font-family: Playfair Display, sans-serif;
+    font-family: 'Playfair Display', sans-serif;
 }
 
 #logo {
