--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ h1, h2 {
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/hero-image.jpg');
     height: 600px;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,4 +98,38 @@ h1, h2 {
 .our-story:hover {
     background-color: #1f3b33;
     color: white ;
+}
+
+/* Latest Blog Post Section */
+#blog-posts h1 {
+    text-align: center;
+    font-size: xx-large;
+    margin-top: 20px;
+}
+
+#post-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    height: 600px;
+    margin: 40px auto;
+}
+
+#left-container{
+    min-height: 500px;
+    width: 25%;
+    background-color: blue;
+}
+
+#center-container{
+    min-height: 500px;
+    width: 25%;
+    background-color: red;
+}
+
+#right-container{
+    min-height: 500px;
+    width: 25%;
+    background-color: green;
 }
