--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,10 +101,16 @@ h1, h2 {
 }
 
 /* Latest Blog Post Section */
-#blog-posts h1 {
+#blog-posts {
     text-align: center;
-    font-size: xx-large;
-    margin-top: 20px;
+    font-size: 300%;
+    margin: 20px 0;
+}
+
+hr {
+    border-top: 2px solid #3a3a3a;
+    width: 30%;
+    margin: 2px auto;
 }
 
 #post-container {
