--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,3 +171,59 @@ hr {
 .title-link-2:hover {
     color: #7d9242;  
 }
+
+/* Newsletter Section */
+
+/* #newsletter-section {
+    height: 600px;
+    width: 100%;
+    background-color: #ffffff;
+} */
+
+#newsletter-box {
+    height: 500px;
+    width: 50%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    background-color: #7BA696;
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    /* justify-content: space-evenly;
+    align-items: center;
+    align-content: center; */
+}
+
+#newsletter-image {
+    height: 500px;
+    width: 50%;
+    background-color: #7BA696;
+}
+
+#newsletter-content {
+    height: 500px;
+    width: 50%;
+    background-color: #ffffff;
+    text-align: center;
+}
+
+#newsletter-content h3{
+    font-family: 'Playfair Display', sans-serif;
+    font-size: xx-large;
+    letter-spacing: 1px;
+    padding: 30px 20px 0 20px;
+    text-transform: uppercase;
+    
+}
+
+#newsletter-content hr {
+    border-top: 1px solid #3a3a3a;
+    width: 80%;
+    margin: 10px auto;
+}
+
+#newsletter-content p {
+    letter-spacing: 1px;
+    line-height: 25px;
+    padding: 0 20px;
+}
