Add structure for form element on index.html and remove button in #newsletter-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,11 +174,11 @@ hr {
 
 /* Newsletter Section */
 
-/* #newsletter-section {
+#newsletter-section {
     height: 600px;
     width: 100%;
     background-color: #ffffff;
-} */
+}
 
 #newsletter-box {
     height: 500px;
