--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,3 +227,55 @@ hr {
     line-height: 25px;
     padding: 0 20px;
 }
+
+/*Form in Newletter section */
+
+.newsletter-form {
+    margin: 15px auto;
+    max-width: 400px;
+    position: relative;
+}
+
+.text-input {
+    background-color: rgba(242, 193, 189, 0.7);
+    width: 70%;
+    height: 30px;
+    margin: 5px 0 20px 0;
+    padding-left: 5px;
+    border: 1px solid rgb(58, 58, 58, 0.1);
+    border-radius: 2px;
+    outline: none;
+    transition: 0.2s;
+}
+
+input::placeholder {
+    letter-spacing: 1px;
+    font-family: 'Montserrat', sans-serif;
+    color: #3a3a3a;
+}
+
+.text-input:focus {
+    border: 2px solid rgb(58, 58, 58,0.4)
+}
+
+.text-input:hover {
+    transition: 0.4s;
+    border-color: rgb(58, 58, 58,0.6);
+}
+
+.newsletter-button {
+    margin-top: 5px;
+    border-radius: 4px;
+    padding: 12px 24px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #58A690;
+    color: #ffffff;
+    transition-duration: 0.4s;
+    text-transform: uppercase;
+    font-size: 110%;
+}
+
+.newsletter-button:hover {
+    background-color: rgba(88, 166, 144, 0.8);
+}
