Change background-color of #newsletter-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ hr {
 #newsletter-content {
     height: 500px;
     width: 50%;
-    background-color: #ffffff;
+    background-color: #F5F5F5;
     text-align: center;
 }
 
