Move logo into nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,3 +284,9 @@ input::placeholder {
 .newsletter-button:hover {
     background-color: rgba(88, 166, 144, 0.8);
 }
+
+/* Footer */
+
+footer {
+    
+}
