--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,7 @@ footer {
 
 .social-networks i {
     font-size: 220%;
-    margin: 30px;
+    margin: 1%;
     padding: 0 20px;
     color: #3f4826;
 }
