--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,3 +308,41 @@ footer {
     padding: 0 20px;
     color: #3f4826;
 }
+
+/* About Us Section */
+
+#about-us-heading {
+    margin-top: 30px;
+    font-size: 300%;
+    text-align: center;
+    text-transform: capitalize;
+}
+
+#about-us {
+    height: 900px;
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+}
+
+
+.about-us-content {
+    height: 600px;
+    width: 25%;
+}
+
+.about-us-content img {
+    height: 300px;
+    width: 100%;
+    object-fit: contain;
+    margin-bottom: 20px;
+}
+
+.about-us-content p {
+    margin-top: 20px;
+    line-height: 25px;
+    letter-spacing: 1px;
+}
