Fix height in Newsletter Section by removing it and adding margins for #newsletter-section, #newsletter-image img and #newsletter-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,13 +173,12 @@ hr {
 /* Newsletter Section */
 
 #newsletter-section {
-    height: 600px;
     width: 100%;
     background-color: #ffffff;
+    margin: 50px auto;
 }
 
 #newsletter-box {
-    height: 500px;
     width: 50%;
     margin: 0 auto;
     box-sizing: border-box;
@@ -192,7 +191,6 @@ hr {
 }
 
 #newsletter-image {
-    height: 500px;
     width: 50%;
     background-color: #7BA696;
     text-align: center;
@@ -205,10 +203,10 @@ hr {
 }
 
 #newsletter-content {
-    height: 500px;
     width: 50%;
     background-color: #F5F5F5;
     text-align: center;
+    margin: 10px;
 }
 
 #newsletter-content h3{
