--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,7 @@ footer {
     max-height: 500px;
     width: 100%;
     margin-bottom: 20px;
+    object-fit:contain;
 }
 
 .about-us-content p {
