--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ footer {
 }
 
 .travel-post {
-    height: 800px;
+    /* height: 800px; */
     width: 100%;
 }
 
@@ -363,7 +363,7 @@ footer {
 
 .travel-post img {
     display: block;
-    height: 400px;
+    max-height: 400px;
     width: 40%;
     text-align: center;
     margin: 30px auto;
