--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h2 {
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
-    font-size: 120%;
+    font-size: 100%;
     padding: 0 40px;
     letter-spacing: 2px;
 }
@@ -82,6 +82,10 @@ h2 {
     left: 50%;
     transform: translate(-50%, -50%);
     color: #DAE7E3;
+}
+
+.hero-text p {
+    font-size: large;
 }
 
 /* Our Story Button */
@@ -481,3 +485,18 @@ h2~p {
         font-size: 200%
     }
 }
+
+/* Screen-sizes up to 768px */
+@media screen and (max-width: 768px) {
+    #newsletter-image img {
+        display: none;
+    }
+
+    #header {
+        flex-direction: column;
+        padding: 10px;
+        gap: 15px;
+    }
+}
+
+/*Screen-sizes up to 6
