Change footer height to max-height for better responsivness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ input::placeholder {
 /* Footer */
 
 footer {
-    height: 80px;
+    max-height: 80px;
     width: 100%;
     background-color: #e5dedc;
     overflow: auto;
@@ -498,5 +498,3 @@ h2~p {
         gap: 15px;
     }
 }
-
-/*Screen-sizes up to 6
