Add @media queries for footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,12 @@ h2~p {
         padding: 10px;
         gap: 15px;
     }
+
+    .social-networks i {
+        font-size: 170%;
+        margin: 1%;
+        padding: 0 10px;
+    }
 }
 
 /* Screen-sizes up to 600px */
@@ -521,6 +527,12 @@ h2~p {
 
     .hero-text p {
         font-size: medium;
+    }
+
+    .social-networks i {
+        font-size: 150%;
+        margin: 1%;
+        padding: 0 10px;
     }
 }
 
