--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,9 +384,10 @@ footer {
 .travel-post img {
     display: block;
     max-height: 500px;
-    width: 50%;
+    width: 100%;
     text-align: center;
     margin: 30px auto;
+    object-fit: contain;
 }
 
 .travel-post hr {
@@ -437,9 +438,10 @@ h2~p {
 .food-post img {
     display: block;
     max-height: 500px;
-    width: 50%;
+    width: 100%;
     text-align: center;
     margin: 30px auto;
+    object-fit: contain;
 }
 
 .food-post hr {
